# bible-react

./: .env.sample  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
bible_rag/: main.py
bible_rag/ingestion/: ingestion.py
bible_rag/model/: tools.py
bible_rag/storage/: local_storage.py
bible_react/: main.py
bible_react/ingestion/: ingestion.py
bible_react/interface/: interface.py
bible_react/model/: agent_bible_find.py  assistant.py  tools.py
bible_react/static/config/: config.py
rag_intro/interface/: interface.py
rag_intro/model/: agent_bible_find.py  assistant.py  tools.py
rag_intro/modules/: load_data.py
tests/: test.ipynb
